--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,3 +1,4 @@
+
  <div class="card">
    <img [src]="characterImage" alt="{{ characterName }}" />
    <h2>
@@ -6,4 +7,6 @@
    <p>
     {{ actor | slice:0:20 }}{{ actor.length > 20 ? '...' : '' }}
    </p>
+   <!-- <a routerLink="/character-details">Ir para Nova Página</a> -->
  </div>
+ 
